Fancy URLs and better filenames.

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
+Options FollowSymLinks MultiViews
+
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
-
+RewriteRule ^chapter/([0-9A-Za-z\-]+)/?$ /$1.php [L]
 </IfModule>
