--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 Options FollowSymLinks MultiViews
 
+DirectoryIndex 1-rethinking-retirement.php
+
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
