--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,5 @@ Options FollowSymLinks MultiViews
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
-RewriteRule ^chapter/([0-9A-Za-z\-]+)/?$ /$1.php [L]
+RewriteRule ^chapter-([0-9A-Za-z\-]+)/?$ /$1.php [L]
 </IfModule>
