--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
-<IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteRule ^chapter-([0-9A-Za-z\-]+)/?$ chapter-$1.php [L]
-</IfModule>
+# Options FollowSymLinks MultiViews
+
+# <IfModule mod_rewrite.c>
+# RewriteEngine On
+# RewriteRule ^chapter-([0-9A-Za-z\-]+)/?$ chapter-$1.php [L]
+# </IfModule>
