--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,8 @@
 # RewriteEngine On
 # RewriteRule ^chapter-([0-9A-Za-z\-]+)/?$ chapter-$1.php [L]
 # </IfModule>
+
+AddType application/vnd.ms-fontobject .eot
+AddType font/ttf .ttf
+AddType font/otf .otf
+AddType application/x-font-woff .woff
